--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -354,12 +354,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "VdjbUdczJyqr"
+        "id": "VdjbUdczJyqr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b74fdc65-4520-4e74-efd5-b22912c1ed04"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ],
+      "source": [
+        "name = \"Julia\"\n",
+        "Python = 3\n",
+        "prior= False\n",
+        "print (prior)"
+      ]
     },
     {
       "cell_type": "markdown",
