--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -1476,13 +1476,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "KkAOHZN-0Ocd"
+        "id": "KkAOHZN-0Ocd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c6886ae3-5db8-441b-8be7-848e1fdec8f7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0Warning: Failed to create the file ./data/wk1/: Is a directory\n",
+            "\r  1  105k    1  1177    0     0   4635      0  0:00:23 --:--:--  0:00:23  4652\n",
+            "curl: (23) Failure writing output to destination\n"
+          ]
+        }
+      ],
       "source": [
-        "# use this code cell to answer the question"
+        "# use this code cell to answer the question\n",
+        "!curl https://storage.googleapis.com/qm2/wk1/spotify-2023.csv -o ./data/wk1/"
       ]
     }
   ],
