--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -1128,10 +1128,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 27,
       "metadata": {
         "id": "8wijKcab0Ocd",
-        "outputId": "75800842-bf2a-4c19-c55c-c74a509c4ccb",
+        "outputId": "cc355bf8-a4d0-45d1-917e-bca92eb29455",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -1143,15 +1143,15 @@
           "data": {
             "text/plain": [
               "    Name  First Appearance  Approx height  Gender  Law Enforcement\n",
-              "4  Giant               2.1            7.5    Male            False\n",
-              "0    Bob               1.2            6.0    Male            False\n",
-              "2   Coop               1.1            6.0    Male             True\n",
               "1   Mike               1.2            5.5    Male            False\n",
-              "3  Maddy               1.3            5.5  Female            False"
+              "3  Maddy               1.3            5.5  Female            False\n",
+              "5  Donna               1.1            5.5  Female            False\n",
+              "0    Bob               1.2            6.0    Male            False\n",
+              "2   Coop               1.1            6.0    Male             True"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c9d8bf44-7cab-40e0-bfbf-7b69e300f609\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-257f7473-1c2b-4bb5-afcd-5a38c43b5a3a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1179,11 +1179,27 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>Giant</td>\n",
-              "      <td>2.1</td>\n",
-              "      <td>7.5</td>\n",
+              "      <th>1</th>\n",
+              "      <td>Mike</td>\n",
+              "      <td>1.2</td>\n",
+              "      <td>5.5</td>\n",
               "      <td>Male</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Maddy</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>5.5</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Donna</td>\n",
+              "      <td>1.1</td>\n",
+              "      <td>5.5</td>\n",
+              "      <td>Female</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -1202,29 +1218,13 @@
               "      <td>Male</td>\n",
               "      <td>True</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Mike</td>\n",
-              "      <td>1.2</td>\n",
-              "      <td>5.5</td>\n",
-              "      <td>Male</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>Maddy</td>\n",
-              "      <td>1.3</td>\n",
-              "      <td>5.5</td>\n",
-              "      <td>Female</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c9d8bf44-7cab-40e0-bfbf-7b69e300f609')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-257f7473-1c2b-4bb5-afcd-5a38c43b5a3a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1276,12 +1276,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c9d8bf44-7cab-40e0-bfbf-7b69e300f609 button.colab-df-convert');\n",
+              "        document.querySelector('#df-257f7473-1c2b-4bb5-afcd-5a38c43b5a3a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c9d8bf44-7cab-40e0-bfbf-7b69e300f609');\n",
+              "        const element = document.querySelector('#df-257f7473-1c2b-4bb5-afcd-5a38c43b5a3a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1301,8 +1301,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c65ede31-c4ea-4cbf-9ad8-792b51e542c6\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c65ede31-c4ea-4cbf-9ad8-792b51e542c6')\"\n",
+              "<div id=\"df-82ccd22d-8057-4c94-9f4b-6dd541485590\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-82ccd22d-8057-4c94-9f4b-6dd541485590')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1421,7 +1421,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c65ede31-c4ea-4cbf-9ad8-792b51e542c6 button');\n",
+              "        document.querySelector('#df-82ccd22d-8057-4c94-9f4b-6dd541485590 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1433,15 +1433,15 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"Name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"Bob\",\n          \"Maddy\",\n          \"Coop\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"First Appearance\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.40865633483405106,\n        \"min\": 1.1,\n        \"max\": 2.1,\n        \"num_unique_values\": 4,\n        \"samples\": [\n          1.2,\n          1.3,\n          2.1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Approx height\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.8215838362577492,\n        \"min\": 5.5,\n        \"max\": 7.5,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          7.5,\n          6.0,\n          5.5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Gender\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Female\",\n          \"Male\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Law Enforcement\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          true,\n          false\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"data\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"Name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"Maddy\",\n          \"Coop\",\n          \"Donna\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"First Appearance\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.08366600265340753,\n        \"min\": 1.1,\n        \"max\": 1.3,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          1.2,\n          1.3,\n          1.1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Approx height\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.2738612787525831,\n        \"min\": 5.5,\n        \"max\": 6.0,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          6.0,\n          5.5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Gender\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Female\",\n          \"Male\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Law Enforcement\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          true,\n          false\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 27
         }
       ],
       "source": [
-        "data.sort_values(by='Approx height', ascending=False).head()"
+        "data.sort_values(by='Approx height', ascending=True).head()"
       ]
     },
     {
