--- a/notebooks/W02. Pandas.ipynb
+++ b/notebooks/W02. Pandas.ipynb
@@ -71,10 +71,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "cSISKOHUOglB",
-        "outputId": "f92de5e7-3e50-4f3b-cb5f-c941b2a83191",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f92de5e7-3e50-4f3b-cb5f-c941b2a83191"
       },
       "outputs": [
         {
@@ -124,11 +124,11 @@
       "execution_count": 4,
       "metadata": {
         "id": "GD2qMhAxOglK",
-        "outputId": "69a67f62-ec14-4fcd-b1dd-bded3b1c2b58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        }
+        },
+        "outputId": "69a67f62-ec14-4fcd-b1dd-bded3b1c2b58"
       },
       "outputs": [
         {
@@ -616,11 +616,11 @@
       "execution_count": 5,
       "metadata": {
         "id": "SqAN20onOglN",
-        "outputId": "a9118da5-3a2c-45dd-c747-0d5c6ad24672",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 379
-        }
+        },
+        "outputId": "a9118da5-3a2c-45dd-c747-0d5c6ad24672"
       },
       "outputs": [
         {
@@ -1102,11 +1102,11 @@
       "execution_count": 6,
       "metadata": {
         "id": "amopH87LOglQ",
-        "outputId": "a2163aa7-f603-4436-b4d9-5a1f5972cd02",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 554
-        }
+        },
+        "outputId": "a2163aa7-f603-4436-b4d9-5a1f5972cd02"
       },
       "outputs": [
         {
@@ -1240,11 +1240,11 @@
       "execution_count": 7,
       "metadata": {
         "id": "VJDvuHzvOglU",
-        "outputId": "2760bf50-468a-4050-cfef-b9c6ac19deb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 410
-        }
+        },
+        "outputId": "2760bf50-468a-4050-cfef-b9c6ac19deb4"
       },
       "outputs": [
         {
@@ -1757,11 +1757,11 @@
       "execution_count": 8,
       "metadata": {
         "id": "D9tXjsnGOglW",
-        "outputId": "5050c04b-9f08-456b-9573-fc1a07b9ba54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 489
-        }
+        },
+        "outputId": "5050c04b-9f08-456b-9573-fc1a07b9ba54"
       },
       "outputs": [
         {
@@ -1881,10 +1881,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "3e7BrLoCOglZ",
-        "outputId": "e1b42cfa-1087-4271-a4c8-6fc3d493e769",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e1b42cfa-1087-4271-a4c8-6fc3d493e769"
       },
       "outputs": [
         {
@@ -1916,10 +1916,10 @@
       "execution_count": 10,
       "metadata": {
         "id": "R7Ix_HYPOglc",
-        "outputId": "3d49bdb0-2455-40ad-9331-bb560f38ae98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3d49bdb0-2455-40ad-9331-bb560f38ae98"
       },
       "outputs": [
         {
@@ -1980,11 +1980,11 @@
       "execution_count": 11,
       "metadata": {
         "id": "PYBoACruOglg",
-        "outputId": "42764d94-f6c7-4527-b6e0-b728c31915da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        }
+        },
+        "outputId": "42764d94-f6c7-4527-b6e0-b728c31915da"
       },
       "outputs": [
         {
@@ -2108,27 +2108,39 @@
         "plt.ylabel('income')\n",
         "data_mean=income['Net equivalised household income in 2010-11, week']\n",
         "data_median=income\n",
-        "plt.axhline(y=income['Net equivalised household income in 2010-11, week'].mean())\n"
+        "plt.axhline(y=income['Net equivalised household income in 2010-11, week'].mean())\n",
+        "plt.axhline(y=income['Net equivalised'].mean())\n"
       ],
       "metadata": {
-        "id": "-yref9yJ1_GN",
-        "outputId": "7c50423f-a07b-438c-9585-b726298d8066",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 693
-        }
+          "height": 1000
+        },
+        "id": "-yref9yJ1_GN",
+        "outputId": "84196615-f055-4a69-f00f-5c3746d658fd"
       },
-      "execution_count": 34,
+      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.lines.Line2D at 0x7a11991a6950>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "'Net equivalised'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3805\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3806\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mindex.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mindex.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'Net equivalised'",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-35-43cce3ad938a>\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdata_median\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mincome\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxhline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mincome\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Net equivalised household income in 2010-11, week'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxhline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mincome\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Net equivalised'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4101\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4102\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4103\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4104\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3810\u001b[0m             ):\n\u001b[1;32m   3811\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mInvalidIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3812\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3813\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3814\u001b[0m             \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'Net equivalised'"
+          ]
         },
         {
           "output_type": "display_data",
@@ -2158,11 +2170,11 @@
       "execution_count": 15,
       "metadata": {
         "id": "y5CBXm8HOgln",
-        "outputId": "cc6f28a3-df62-462e-a03d-5fe19b055dac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 715
-        }
+        },
+        "outputId": "cc6f28a3-df62-462e-a03d-5fe19b055dac"
       },
       "outputs": [
         {
@@ -2242,11 +2254,11 @@
       "execution_count": 20,
       "metadata": {
         "id": "WTfrHUP6Oglr",
-        "outputId": "96cc030c-4a0e-4075-f772-4dd7f386c711",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 304
-        }
+        },
+        "outputId": "96cc030c-4a0e-4075-f772-4dd7f386c711"
       },
       "outputs": [
         {
