--- a/notebooks/W02. Pandas.ipynb
+++ b/notebooks/W02. Pandas.ipynb
@@ -2107,7 +2107,7 @@
         "plt.xlabel('income percentile')\n",
         "plt.ylabel('income')\n",
         "data_mean=income['Net equivalised household income in 2010-11, week']\n",
-        "data_median=income\n",
+        "data_median=income['Net equivalised household income in 2010-11, week']\n",
         "plt.axhline(y=income['Net equivalised household income in 2010-11, week'].mean())\n",
         "plt.axhline(y=income['Net equivalised household income in 2010-11, week'].median())\n"
       ],
@@ -2117,19 +2117,19 @@
           "height": 717
         },
         "id": "-yref9yJ1_GN",
-        "outputId": "4c97d83f-5e4e-49e2-d157-755e7247f13a"
+        "outputId": "019648af-2c67-41b2-8764-d7561e1d2ee3"
       },
-      "execution_count": 38,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.lines.Line2D at 0x7a11991af0d0>"
+              "<matplotlib.lines.Line2D at 0x7a118ec2d600>"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 39
         },
         {
           "output_type": "display_data",
