--- a/notebooks/W07. Linear Regression.ipynb
+++ b/notebooks/W07. Linear Regression.ipynb
@@ -1988,7 +1988,7 @@
         "plt.ylabel('realhrwage') # remove the y axis label\n",
         "plt.xticks(ticks=[0,1,2],labels=['No coverage', 'Union member','Covered but not a member']) # replace the y axis labels with more descriptive labels\n",
         "\n",
-        "# Seeing as a jointplot is not suitable with categorical data as a x (being the independent variable), a box plot would be better suited\n",
+        "# Q-Qplot to measure heteroscedasticity\n",
         "\n",
         "\n"
       ]
