--- a/notebooks/W04. Natural Language Processing.ipynb
+++ b/notebooks/W04. Natural Language Processing.ipynb
@@ -10904,27 +10904,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 36,
       "metadata": {
         "id": "ldyS7EtqnsTv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a1e23224-38b3-4396-c0ec-5cc9aeb6966d"
+        "outputId": "59ce15ae-0ca5-41e4-f95d-82719845b0a5"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-35-f1464cd47882>:4: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  sample['polarity'] = sample['text'].apply(lambda x: nlp(x)._.blob.polarity)\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -10935,23 +10923,11 @@
             "Polarity: -1.0\n",
             "Subjectivity: 1.0\n"
           ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-35-f1464cd47882>:5: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  sample['subjectivity'] = sample['text'].apply(lambda x: nlp(x)._.blob.subjectivity)\n"
-          ]
         }
       ],
       "source": [
-        "# Create a dataframe called \"sample\" with the first 3000 tweets\n",
-        "sample = tweets.head(3000)\n",
+        "# Create a dataframe called \"sample\" with the first 3000 tweets (I had to add .copy() even though this is not demonstrated in the workshop because otherwise I was getting a warning)\n",
+        "sample = tweets.head(3000).copy()\n",
         "# Calculate polarity and subjectivity scores using a lambda function\n",
         "sample['polarity'] = sample['text'].apply(lambda x: nlp(x)._.blob.polarity)\n",
         "sample['subjectivity'] = sample['text'].apply(lambda x: nlp(x)._.blob.subjectivity)\n",
@@ -10965,7 +10941,9 @@
         "print(f\"author_id: {lowest_sentiment_user['author_id']}\")\n",
         "print(f\"Tweet: {lowest_sentiment_user['text']}\")\n",
         "print(f\"Polarity: {lowest_sentiment_user['polarity']}\")\n",
-        "print(f\"Subjectivity: {lowest_sentiment_user['subjectivity']}\")\n"
+        "print(f\"Subjectivity: {lowest_sentiment_user['subjectivity']}\")\n",
+        "\n",
+        "#The twitter user who hates Exxon the most had the ID : 2649186466."
       ]
     },
     {
