--- a/notebooks/W07. Linear Regression.ipynb
+++ b/notebooks/W07. Linear Regression.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "5ERdQ-QjexKB"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "muDRf4bjexKG"
       },
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "eIFMruxEMvDa"
       },
@@ -172,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -571,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -615,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -942,7 +942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1001,7 +1001,7 @@
         "id": "X2ZM1f00PPws",
         "outputId": "96c7cdae-0461-4e79-f767-ca4070c40d7d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1060,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1130,7 +1130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1189,7 +1189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "6I1H_v6QMvDe"
       },
@@ -1252,7 +1252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1311,7 +1311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1410,7 +1410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1495,7 +1495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1600,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1648,7 +1648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1707,7 +1707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1756,7 +1756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1812,7 +1812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1864,7 +1864,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1902,7 +1902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2040,7 +2040,7 @@
         "\n",
         "from statsmodels.stats.diagnostic import het_breuschpagan\n",
         "\n",
-        "# Perform Breusch-Pagan test\n",
+        "# Perform Breusch-Pagan test to assess if evidence of heteroscedasticity\n",
         "bp_test = het_breuschpagan(residuals, model.model.exog)\n",
         "\n",
         "# Test results\n",
@@ -2052,10 +2052,10 @@
         "# Step 1: Extract relevant independent variables (excluding the dependent variable)\n",
         "independent_vars = filtered_df[['log_realhrwage', 'union_status_Union_Member']]  # Add more variables as needed\n",
         "\n",
-        "# Step 2: Compute the correlation matrix\n",
+        "# Compute the correlation matrix\n",
         "correlation_matrix = independent_vars.corr()\n",
         "\n",
-        "# Step 3: Plot the heatmap\n",
+        "# Plot the heatmap\n",
         "plt.figure(figsize=(8, 6))\n",
         "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\", cbar=True)\n",
         "plt.title(\"Correlation Heatmap for Independent Variables\")\n",
