--- a/notebooks/W07. Linear Regression.ipynb
+++ b/notebooks/W07. Linear Regression.ipynb
@@ -1902,14 +1902,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "Z6EL7CdVMvDo",
-        "outputId": "16cdca7a-464d-4ed0-8e59-50c7df916e99"
+        "outputId": "ca2ebfae-f851-40dc-8c25-e3ec974658f6"
       },
       "outputs": [
         {
@@ -1926,13 +1926,33 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "       state  age  sex  race   sch   ind  union  incwage  realhrwage  \\\n",
+            "1773      27   38    1     1  12.0   770    2.0  40000.0   23.972965   \n",
+            "5016      20   54    1     1  12.0  2290    2.0  61000.0   28.122131   \n",
+            "6868       6   47    1     3  12.0  6180    2.0  75000.0   34.576393   \n",
+            "8777      48   45    1     1  12.0  3190    2.0  77065.0   35.528393   \n",
+            "10597     47   61    1     1  12.0   770    3.0  43000.0   19.823797   \n",
+            "\n",
+            "                                  occupation  log_realhrwage  \\\n",
+            "1773   Consruction, Extraction, Installation        3.176927   \n",
+            "5016   Consruction, Extraction, Installation        3.336557   \n",
+            "6868   Consruction, Extraction, Installation        3.543171   \n",
+            "8777   Consruction, Extraction, Installation        3.570332   \n",
+            "10597  Consruction, Extraction, Installation        2.986883   \n",
+            "\n",
+            "       union_status_Union Member  \n",
+            "1773                        True  \n",
+            "5016                        True  \n",
+            "6868                        True  \n",
+            "8777                        True  \n",
+            "10597                      False  \n",
             "                            OLS Regression Results                            \n",
             "==============================================================================\n",
             "Dep. Variable:         log_realhrwage   R-squared:                       0.070\n",
             "Model:                            OLS   Adj. R-squared:                  0.052\n",
             "Method:                 Least Squares   F-statistic:                     3.967\n",
             "Date:                Fri, 06 Dec 2024   Prob (F-statistic):            0.00927\n",
-            "Time:                        15:16:02   Log-Likelihood:                -136.57\n",
+            "Time:                        16:13:31   Log-Likelihood:                -136.57\n",
             "No. Observations:                 162   AIC:                             281.1\n",
             "Df Residuals:                     158   BIC:                             293.5\n",
             "Df Model:                           3                                         \n",
@@ -2017,8 +2037,9 @@
         "filtered_df['union_status'] = filtered_df['union'].map({\n",
         "    2: \"Union Member\",\n",
         "    3: \"Covered but Not Member\"})\n",
-        "# Create dummy variables for 'union_status'\n",
+        "# Create dummy variables for 'union_status'. 2 (member)=true and 3(non-member)=false.\n",
         "filtered_df = pd.get_dummies(filtered_df, columns=['union_status'], drop_first=True)\n",
+        "print(filtered_df.head())\n",
         "# Rename columns to remove spaces\n",
         "filtered_df.rename(columns={'union_status_Union Member': 'union_status_Union_Member'}, inplace=True)\n",
         "\n",
@@ -2062,7 +2083,8 @@
         "plt.show()\n",
         "\n",
         "#Interpretation:\n",
-        "#The coefficient of 0.49 indicates that workers in construction who are in are not in a union but covered earn 0.49 extra log units of salary per hour compared to those who are in a union.\n",
+        "#In the regression table, T.True refers to Union members. (The coefficient refers to union members compared to covered but non union members)\n",
+        "#The coefficient of 0.49 indicates that workers in construction who are in a covered and inunion earn 49% more than those who are covered but not in a union\n",
         "#this relationship is positive and significant at the 5% level as indicated by a p-value of 0.003\n"
       ]
     },
