--- a/notebooks/W07. Linear Regression.ipynb
+++ b/notebooks/W07. Linear Regression.ipynb
@@ -2083,8 +2083,8 @@
         "plt.show()\n",
         "\n",
         "#Interpretation:\n",
-        "#In the regression table, T.True refers to Union members. (The coefficient refers to union members compared to covered but non union members)\n",
-        "#The coefficient of 0.49 indicates that workers in construction who are in a covered and inunion earn 49% more than those who are covered but not in a union\n",
+        "#In the regression table, C(union_status_Union_Member)[T.True] refers to Union members. (The coefficient refers to union members compared to covered but non union members)\n",
+        "#The coefficient of 0.49 indicates that workers in construction who are covered and in a union earn 49% more than those who are covered but not in a union.\n",
         "#this relationship is positive and significant at the 5% level as indicated by a p-value of 0.003\n"
       ]
     },
