--- a/notebooks/W01. Python Recap.ipynb
+++ b/notebooks/W01. Python Recap.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "wbEBXSjyInDS"
       },
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "mX21mc1GInDY",
         "outputId": "c9cae8ed-7e17-465f-a91f-8526c67040a8",
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "H_i_d3GXInDb",
         "outputId": "a95f1afc-0022-41ec-9919-e9438194ad7d",
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "97crKLfSInDe",
         "outputId": "99021c77-863e-4677-f89d-d2ec633152c9",
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "rW3iJbkoInDk",
         "outputId": "4d14bb5b-d266-4f6c-e78d-23efc7d348e2",
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "z_2Y9lctInDp",
         "outputId": "9c8ef732-a283-4eec-df36-1156bbe3b906",
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "7ykZEOWTInDt"
       },
@@ -373,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "VdjbUdczJyqr",
         "colab": {
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "7Hqi7hA1KEGi",
         "colab": {
@@ -760,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "-ZSM3GvqInEG"
       },
@@ -783,7 +783,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -876,7 +876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "KkAOHZN-0Ocd",
         "colab": {
@@ -909,7 +909,8 @@
         "sorted_df=(filtered_df.sort_values(by=\"streams\", ascending=False).head())\n",
         "\n",
         "top_artist = sorted_df.iloc[0][\"artist(s)_name\"]\n",
-        "print(top_artist)"
+        "print(top_artist)\n",
+        "# The Weekend has the song with the highest number of streams"
       ]
     },
     {
@@ -925,7 +926,7 @@
         "id": "ytKSEwzg8u7t",
         "outputId": "89a9db8f-5a3a-4bb9-8b46-6c67681d75cc"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
