--- a/notebooks/W07. Linear Regression.ipynb
+++ b/notebooks/W07. Linear Regression.ipynb
@@ -2403,7 +2403,7 @@
         "summary=reg_df.groupby('union')['realhrwage'].describe()\n",
         "print(summary)\n",
         "\n",
-        "#sns coutplot\n",
+        "#sns countplot\n",
         "sns.countplot(data=reg_df, x='union')\n",
         "plt.rcParams[\"figure.figsize\"] = [10,20]\n",
         "plt.xticks(ticks=[0,1,2,3], labels=['N/A', 'No union Coverage','Member of Union', 'Covered by Union but not a Member'])\n",
