--- a/notebooks/W06. Hypothesis Testing.ipynb
+++ b/notebooks/W06. Hypothesis Testing.ipynb
@@ -978,10 +978,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 30,
       "metadata": {
         "id": "mhyfdFG0xjlF",
-        "outputId": "92becdde-fa42-4ac4-c660-bda375c06d09",
+        "outputId": "d1f91991-6fcb-4a56-adce-b2536bc5f204",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 756
@@ -992,9 +992,9 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-27-c334b5cc606b>:8: UserWarning: Parsing dates in %d/%m/%Y %HH format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+            "<ipython-input-30-fa0756270b33>:8: UserWarning: Parsing dates in %d/%m/%Y %HH format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
             "  tweets['hour']=pd.to_datetime(tweets['hour'])\n",
-            "<ipython-input-27-c334b5cc606b>:33: UserWarning: color is redundantly defined by the 'color' keyword argument and the fmt string \"b\" (-> color=(0.2980392156862745, 0.4470588235294118, 0.6901960784313725, 1)). The keyword argument will take precedence.\n",
+            "<ipython-input-30-fa0756270b33>:34: UserWarning: color is redundantly defined by the 'color' keyword argument and the fmt string \"b\" (-> color=(0.2980392156862745, 0.4470588235294118, 0.6901960784313725, 1)). The keyword argument will take precedence.\n",
             "  plt.plot_date(tweets['hour'], tweets['count'], 'b', color='red')\n"
           ]
         },
@@ -1043,6 +1043,7 @@
         "\n",
         "# t-test\n",
         "t_statistic, p_value = ttest_ind(pre, post, equal_var=False)  # Welch's t-test\n",
+        "# I tried using the t-stat as shown in the workshop but I kept getting an error saying sed is not defined even though I did define it, so I had to find an alternative.\n",
         "\n",
         "# Print the t-statistic and p-value\n",
         "print(f\"T-statistic: {t_statistic:.3f}\")\n",
@@ -1055,7 +1056,8 @@
         "plt.legend()\n",
         "plt.title('Elon Musk tweets \"The bird is freed\"; Tweets containing racial slurs increase {}%'.format(pct_change))\n",
         "plt.gca().xaxis.set_major_locator(mdates.DayLocator())\n",
-        "plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%d/%m'))"
+        "plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%d/%m'))\n",
+        "\n"
       ]
     },
     {
